--- a/index.html
+++ b/index.html
@@ -9,9 +9,30 @@
   <style>
     .masar-logo {
       max-height: 120px;
-      background-color: #00c4cc;
       border-radius: 8px;
       padding: 4px;
+      background-color: transparent;
+    }
+    .hero {
+      background: linear-gradient(135deg, #00c4cc 0%, #0077cc 100%);
+    }
+    .form-container {
+      max-width: 900px;
+      margin: 0 auto;
+      padding: 2rem;
+      box-shadow: 0 0.5em 1em -0.125em rgba(10,10,10,.1), 0 0 0 1px rgba(10,10,10,.02);
+      border-radius: 8px;
+      background: white;
+    }
+    .participant-box {
+      border-left: 4px solid #00c4cc;
+      padding-left: 1rem;
+      margin-bottom: 1.5rem;
+    }
+    .section-title {
+      border-bottom: 2px solid #00c4cc;
+      padding-bottom: 0.5rem;
+      margin-bottom: 1.5rem;
     }
   </style>
 </head>
@@ -27,7 +48,9 @@
         </div>
         <div class="column is-narrow">
           <figure class="image is-128x128">
-            <img src="https://github.com/zlaflous/Moroccan-Youth-Athletic-Festival-Tournament-Registration/blob/main/MASAR_Logo_Transparent%20(1).png?raw=true" alt="MASAR Logo" class="masar-logo">
+            <img src="https://github.com/zlaflous/Moroccan-Youth-Athletic-Festival-Tournament-Registration/blob/main/MASAR_Logo_Transparent%20(1).png?raw=true" 
+                 alt="MASAR Logo" 
+                 class="masar-logo">
           </figure>
         </div>
       </div>
@@ -35,50 +58,106 @@
   </div>
 </section>
 
-<form id="form" class="container m-4 pl-4" method="POST">
-  <h2 class="title is-4 mt-5">Parent Information</h2>
-  <div class="field"><label class="label">Full Name</label><div class="control"><input class="input" type="text" name="Parent Full Name" required></div></div>
-  <div class="field"><label class="label">Email</label><div class="control"><input class="input" type="email" name="Parent Email" required></div></div>
-  <div class="field"><label class="label">Phone Number</label><div class="control"><input class="input" type="tel" name="Parent Phone" required></div></div>
+<div class="section">
+  <div class="form-container">
+    <form id="form" method="POST">
+      <h2 class="title is-4 section-title">Parent Information</h2>
+      <div class="field">
+        <label class="label">Full Name</label>
+        <div class="control">
+          <input class="input" type="text" name="Parent Full Name" required>
+        </div>
+      </div>
+      <div class="field">
+        <label class="label">Email</label>
+        <div class="control">
+          <input class="input" type="email" name="Parent Email" required>
+        </div>
+      </div>
+      <div class="field">
+        <label class="label">Phone Number</label>
+        <div class="control">
+          <input class="input" type="tel" name="Parent Phone" required>
+        </div>
+      </div>
 
-  <h2 class="title is-4 mt-5">Participant Information</h2>
-  <div id="participants-container"></div>
-  <div class="field"><div class="control"><button class="button is-info" type="button" onclick="addParticipant()">Add Participant</button></div></div>
+      <h2 class="title is-4 section-title">Participant Information</h2>
+      <div id="participants-container"></div>
+      <div class="field">
+        <div class="control">
+          <button class="button is-info" type="button" onclick="addParticipant()">
+            <span class="icon">
+              <i class="fas fa-plus"></i>
+            </span>
+            <span>Add Participant</span>
+          </button>
+        </div>
+      </div>
 
-  <h2 class="title is-4 mt-5">Waiver & Consent</h2>
-  <div class="field">
-    <div class="control">
-      <textarea class="textarea" readonly>
-I, the parent or legal guardian of the participant, give permission for my child to take part in the Moroccan Youth Athletic Festival. I understand that participation in sports involves certain risks of injury and voluntarily assume all such risks. I release MASAR, event organizers, coaches, and volunteers from any liability for injuries or damages that may occur during the event. I authorize emergency medical treatment if needed and accept responsibility for any associated costs. I also give permission for my child’s photos or videos to be used for promotional purposes without compensation. I confirm my child is in good health and able to participate.
-      </textarea>
-    </div>
+      <h2 class="title is-4 section-title">Waiver & Consent</h2>
+      <div class="field">
+        <div class="control">
+          <textarea class="textarea" readonly style="min-height: 150px;">
+I, the parent or legal guardian of the participant, give permission for my child to take part in the Moroccan Youth Athletic Festival...
+          </textarea>
+        </div>
+      </div>
+      <div class="field">
+        <div class="control">
+          <label class="checkbox">
+            <input type="checkbox" name="Waiver Consent" required> 
+            I have read and agree to the above waiver.
+          </label>
+        </div>
+      </div>
+
+      <div id="total-due" class="notification is-info" style="display:none;">
+        Total Due: $0
+      </div>
+      
+      <div id="proceed-container" class="field mt-5">
+        <div class="control">
+          <button class="button is-warning is-medium" type="button" onclick="startPayPal()">
+            Proceed to Payment
+          </button>
+        </div>
+      </div>
+      
+      <div id="paypal-button-container" style="display:none;"></div>
+    </form>
   </div>
-  <div class="field"><div class="control"><label class="checkbox"><input type="checkbox" name="Waiver Consent" required> I have read and agree to the above waiver.</label></div></div>
+</div>
 
-  <div id="total-due" class="notification is-info" style="display:none; font-weight:bold; margin-top:20px;">Total Due: $0</div>
-  <div id="proceed-container" class="field mt-5"><div class="control"><button class="button is-warning" type="button" onclick="startPayPal()">Proceed to Payment</button></div></div>
-  <div id="paypal-button-container" style="display:none;" class="mt-4"></div>
-</form>
-
+<script src="https://kit.fontawesome.com/a076d05399.js"></script>
 <script>
-function updateTotalAmount() {
-  const participantCount = document.querySelectorAll('#participants-container .box').length;
-  const totalDueDiv = document.getElementById('total-due');
-  if (participantCount > 0) {
-    totalDueDiv.style.display = 'block';
-    totalDueDiv.textContent = `Total Due: $${participantCount * 10}`;
-  } else {
-    totalDueDiv.style.display = 'none';
-  }
-}
-
 function addParticipant() {
   const container = document.getElementById('participants-container');
   const id = `participant-${Date.now()}`;
   const index = container.children.length;
   container.insertAdjacentHTML('beforeend', `
-    <div class="box mt-4" id="${id}">
-      <!-- ... other fields ... -->
+    <div class="box participant-box" id="${id}">
+      <div class="is-flex is-justify-content-space-between is-align-items-center mb-3">
+        <h3 class="title is-5">Participant ${index + 1}</h3>
+        <button type="button" class="delete is-medium" onclick="removeParticipant('${id}')"></button>
+      </div>
+      <div class="field">
+        <label class="label">First Name</label>
+        <div class="control">
+          <input class="input" type="text" name="Participant First Name[]" required>
+        </div>
+      </div>
+      <div class="field">
+        <label class="label">Last Name</label>
+        <div class="control">
+          <input class="input" type="text" name="Participant Last Name[]" required>
+        </div>
+      </div>
+      <div class="field">
+        <label class="label">Date of Birth</label>
+        <div class="control">
+          <input class="input" type="date" name="Participant DOB[]" required>
+        </div>
+      </div>
       <div class="field">
         <label class="label">Gender</label>
         <div class="control">
@@ -92,76 +171,32 @@ function addParticipant() {
           </label>
         </div>
       </div>
-      <!-- ... rest of participant fields ... -->
+      <div class="field soccer-level" id="soccer-${id}">
+        <label class="label">Soccer Level</label>
+        <div class="control">
+          <div class="select is-fullwidth">
+            <select name="Soccer Level[]">
+              <option value="recreational">Recreational</option>
+              <option value="travel">Travel</option>
+            </select>
+          </div>
+        </div>
+      </div>
     </div>
   `);
   updateTotalAmount();
 }
 
-function removeParticipant(id) {
-  const box = document.getElementById(id);
-  if (box) {
-    box.remove();
-  }
-  updateTotalAmount();
-}
-
 function toggleSoccerLevel(participantId, show) {
   const el = document.getElementById(`soccer-${participantId}`);
-  if (el) {
-    el.style.display = show ? 'block' : 'none';
-    const select = el.querySelector('select');
-    if (!show && select) {
-      select.value = "";
-    }
-  }
-}
-
-function startPayPal() {
-  const parentName = document.querySelector('input[name="Parent Full Name"]').value.trim();
-  const parentEmail = document.querySelector('input[name="Parent Email"]').value.trim();
-  const parentPhone = document.querySelector('input[name="Parent Phone"]').value.trim();
-  const waiverConsent = document.querySelector('input[name="Waiver Consent"]:checked');
-  const participantBoxes = document.querySelectorAll('#participants-container .box');
-
-  if (!parentName || !parentEmail || !parentPhone || !waiverConsent || participantBoxes.length === 0) {
-    alert("Please complete all Parent Information, add at least one Participant, and agree to Waiver.");
-    return;
-  }
-
-  for (let box of participantBoxes) {
-    const firstName = box.querySelector('input[name="Participant First Name[]"]').value.trim();
-    const lastName = box.querySelector('input[name="Participant Last Name[]"]').value.trim();
-    const dob = box.querySelector('input[name="Participant DOB[]"]').value.trim();
-    const genderSelected = box.querySelector('input[type="radio"]:checked');
-    if (!firstName || !lastName || !dob || !genderSelected) {
-      alert("Please fill out all fields for every participant.");
-      return;
-    }
-  }
-
-  document.getElementById('proceed-container').style.display = 'none';
-  document.getElementById('paypal-button-container').style.display = 'block';
-
-  paypal.Buttons({
-    createOrder: function(data, actions) {
-      const participantCount = participantBoxes.length;
-      const totalAmount = participantCount * 10;
-      return actions.order.create({purchase_units: [{amount: {value: totalAmount.toFixed(2)}}]});
-    },
-    onApprove: function(data, actions) {
-      return actions.order.capture().then(function(details) {
-        sendFormData();
-      });
-    }
-  }).render('#paypal-button-container');
+  if (el) el.style.display = show ? 'block' : 'none';
 }
 
 function sendFormData() {
   const form = document.getElementById('form');
   const formData = new FormData(form);
   
-  // Convert FormData to object with arrays for repeated fields
+  // Collect all participant data including gender
   const formDataObj = {};
   formData.forEach((value, key) => {
     if (key.endsWith('[]')) {
@@ -170,16 +205,6 @@ function sendFormData() {
       formDataObj[cleanKey].push(value);
     } else {
       formDataObj[key] = value;
-    }
-  });
-
-  // Handle radio buttons (Gender)
-  const participantBoxes = document.querySelectorAll('#participants-container .box');
-  formDataObj["Gender"] = [];
-  participantBoxes.forEach(box => {
-    const genderSelected = box.querySelector('input[type="radio"]:checked');
-    if (genderSelected) {
-      formDataObj["Gender"].push(genderSelected.value);
     }
   });
 
@@ -195,22 +220,14 @@ function sendFormData() {
     }
   }
 
-  const formDataString = keyValuePairs.join("&");
-  
   fetch("https://script.google.com/macros/s/AKfycbxxtQnrbYjg06wBU30dmORSk3ef_bDZ-Qju5vaLJXx14vM80bNKFbsOo59GA_8do0Nw/exec", {
     method: "POST",
-    body: formDataString,
-    headers: {
-      "Content-Type": "application/x-www-form-urlencoded"
-    }
+    body: keyValuePairs.join("&"),
+    headers: {"Content-Type": "application/x-www-form-urlencoded"}
   }).then(response => {
-    window.location.href = "thank-you.html";
-  }).catch(error => {
-    console.error('Form submit error:', error);
-    alert('There was a problem submitting your registration.');
+    if (response.ok) window.location.href = "thank-you.html";
   });
 }
 </script>
-
 </body>
 </html>
