--- a/index.html
+++ b/index.html
@@ -131,61 +131,33 @@ I, the parent or legal guardian of the participant, give permission for my child
 <script src="https://kit.fontawesome.com/a076d05399.js"></script>
 <script>
 function addParticipant() {
-  const container = document.getElementById('participants-container');
-  const id = `participant-${Date.now()}`;
-  const index = container.children.length;
-  container.insertAdjacentHTML('beforeend', `
-    <div class="box participant-box" id="${id}">
-      <div class="is-flex is-justify-content-space-between is-align-items-center mb-3">
-        <h3 class="title is-5">Participant ${index + 1}</h3>
-        <button type="button" class="delete is-medium" onclick="removeParticipant('${id}')"></button>
-      </div>
-      <div class="field">
-        <label class="label">First Name</label>
-        <div class="control">
-          <input class="input" type="text" name="Participant First Name[]" required>
-        </div>
-      </div>
-      <div class="field">
-        <label class="label">Last Name</label>
-        <div class="control">
-          <input class="input" type="text" name="Participant Last Name[]" required>
-        </div>
-      </div>
-      <div class="field">
-        <label class="label">Date of Birth</label>
-        <div class="control">
-          <input class="input" type="date" name="Participant DOB[]" required>
-        </div>
-      </div>
-      <div class="field">
-        <label class="label">Gender</label>
-        <div class="control">
-          <label class="radio">
-            <input type="radio" name="Gender[]" value="boy" required onchange="toggleSoccerLevel('${id}', true)">
-            Boy (Soccer)
-          </label>
-          <label class="radio">
-            <input type="radio" name="Gender[]" value="girl" onchange="toggleSoccerLevel('${id}', false)">
-            Girl (Race)
-          </label>
-        </div>
-      </div>
-      <div class="field soccer-level" id="soccer-${id}">
-        <label class="label">Soccer Level</label>
-        <div class="control">
-          <div class="select is-fullwidth">
-            <select name="Soccer Level[]">
-              <option value="recreational">Recreational</option>
-              <option value="travel">Travel</option>
-            </select>
+      const container = document.getElementById('participants-container');
+      const id = `participant-${Date.now()}`;
+      const index = container.children.length;
+      
+      container.insertAdjacentHTML('beforeend', `
+        <div class="box participant-box" id="${id}">
+          <!-- Other fields... -->
+          <div class="field">
+            <label class="label">Gender</label>
+            <div class="control">
+              <label class="radio">
+                <input type="radio" name="Gender-${id}" value="boy" required 
+                       onchange="toggleSoccerLevel('${id}', true)">
+                Boy (Soccer)
+              </label>
+              <label class="radio">
+                <input type="radio" name="Gender-${id}" value="girl" 
+                       onchange="toggleSoccerLevel('${id}', false)">
+                Girl (Race)
+              </label>
+            </div>
           </div>
+          <!-- Soccer level field... -->
         </div>
-      </div>
-    </div>
-  `);
-  updateTotalAmount();
-}
+      `);
+      updateTotalAmount();
+    }
 
 function toggleSoccerLevel(participantId, show) {
   const el = document.getElementById(`soccer-${participantId}`);
