--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
       <div class="field">
         <div class="control">
           <textarea class="textarea" readonly style="min-height: 150px;">
-I, the parent or legal guardian of the participant, give permission for my child to take part in the Moroccan Youth Athletic Festival...
+I, the parent or legal guardian of the participant, give permission for my child to take part in the Moroccan Youth Athletic Festival. I understand that participation in sports involves certain risks of injury and voluntarily assume all such risks. I release MASAR, event organizers, coaches, and volunteers from any liability for injuries or damages that may occur during the event. I authorize emergency medical treatment if needed and accept responsibility for any associated costs. I also give permission for my child’s photos or videos to be used for promotional purposes without compensation. I confirm my child is in good health and able to participate.
           </textarea>
         </div>
       </div>
@@ -130,51 +130,150 @@ I, the parent or legal guardian of the participant, give permission for my child
 
 <script src="https://kit.fontawesome.com/a076d05399.js"></script>
 <script>
+let participantCount = 0;
+
 function addParticipant() {
-      const container = document.getElementById('participants-container');
-      const id = `participant-${Date.now()}`;
-      const index = container.children.length;
-      
-      container.insertAdjacentHTML('beforeend', `
-        <div class="box participant-box" id="${id}">
-          <!-- Other fields... -->
-          <div class="field">
-            <label class="label">Gender</label>
-            <div class="control">
-              <label class="radio">
-                <input type="radio" name="Gender-${id}" value="boy" required 
-                       onchange="toggleSoccerLevel('${id}', true)">
-                Boy (Soccer)
-              </label>
-              <label class="radio">
-                <input type="radio" name="Gender-${id}" value="girl" 
-                       onchange="toggleSoccerLevel('${id}', false)">
-                Girl (Race)
-              </label>
-            </div>
-          </div>
-          <!-- Soccer level field... -->
+  const container = document.getElementById('participants-container');
+  const id = `participant-${Date.now()}`;
+  participantCount++;
+  
+  container.insertAdjacentHTML('beforeend', `
+    <div class="box participant-box" id="${id}">
+      <div class="is-flex is-justify-content-space-between is-align-items-center mb-3">
+        <h3 class="title is-5">Participant ${participantCount}</h3>
+        <button type="button" class="delete is-medium" onclick="removeParticipant('${id}')"></button>
+      </div>
+      <div class="field">
+        <label class="label">First Name</label>
+        <div class="control">
+          <input class="input" type="text" name="Participant First Name[]" required>
         </div>
-      `);
-      updateTotalAmount();
-    }
+      </div>
+      <div class="field">
+        <label class="label">Last Name</label>
+        <div class="control">
+          <input class="input" type="text" name="Participant Last Name[]" required>
+        </div>
+      </div>
+      <div class="field">
+        <label class="label">Date of Birth</label>
+        <div class="control">
+          <input class="input" type="date" name="Participant DOB[]" required>
+        </div>
+      </div>
+      <div class="field">
+        <label class="label">Gender</label>
+        <div class="control">
+          <label class="radio">
+            <input type="radio" name="Gender-${id}" value="boy" required 
+                   onchange="toggleSoccerLevel('${id}', true)">
+            Boy (Soccer)
+          </label>
+          <label class="radio">
+            <input type="radio" name="Gender-${id}" value="girl" 
+                   onchange="toggleSoccerLevel('${id}', false)">
+            Girl (Race)
+          </label>
+        </div>
+      </div>
+      <div class="field soccer-level" id="soccer-${id}" style="display:none;">
+        <label class="label">Soccer Level</label>
+        <div class="control">
+          <div class="select is-fullwidth">
+            <select name="Soccer Level[]">
+              <option value="recreational">Recreational</option>
+              <option value="travel">Travel</option>
+            </select>
+          </div>
+        </div>
+      </div>
+    </div>
+  `);
+  updateTotalAmount();
+}
+
+function removeParticipant(id) {
+  const box = document.getElementById(id);
+  if (box) {
+    box.remove();
+    participantCount--;
+    updateTotalAmount();
+  }
+}
 
 function toggleSoccerLevel(participantId, show) {
   const el = document.getElementById(`soccer-${participantId}`);
   if (el) el.style.display = show ? 'block' : 'none';
 }
 
+function updateTotalAmount() {
+  const count = document.querySelectorAll('#participants-container .box').length;
+  const totalDueDiv = document.getElementById('total-due');
+  totalDueDiv.style.display = count > 0 ? 'block' : 'none';
+  totalDueDiv.textContent = `Total Due: $${count * 10}`;
+}
+
+function startPayPal() {
+  const parentName = document.querySelector('input[name="Parent Full Name"]').value.trim();
+  const parentEmail = document.querySelector('input[name="Parent Email"]').value.trim();
+  const parentPhone = document.querySelector('input[name="Parent Phone"]').value.trim();
+  const waiverConsent = document.querySelector('input[name="Waiver Consent"]:checked');
+  const participantBoxes = document.querySelectorAll('#participants-container .box');
+
+  if (!parentName || !parentEmail || !parentPhone || !waiverConsent || participantBoxes.length === 0) {
+    alert("Please complete all Parent Information, add at least one Participant, and agree to Waiver.");
+    return;
+  }
+
+  for (let box of participantBoxes) {
+    const firstName = box.querySelector('input[name="Participant First Name[]"]').value.trim();
+    const lastName = box.querySelector('input[name="Participant Last Name[]"]').value.trim();
+    const dob = box.querySelector('input[name="Participant DOB[]"]').value.trim();
+    const genderSelected = box.querySelector('input[type="radio"]:checked');
+    if (!firstName || !lastName || !dob || !genderSelected) {
+      alert("Please fill out all fields for every participant.");
+      return;
+    }
+  }
+
+  document.getElementById('proceed-container').style.display = 'none';
+  document.getElementById('paypal-button-container').style.display = 'block';
+
+  paypal.Buttons({
+    createOrder: function(data, actions) {
+      const participantCount = participantBoxes.length;
+      const totalAmount = participantCount * 10;
+      return actions.order.create({
+        purchase_units: [{
+          amount: {
+            value: totalAmount.toFixed(2),
+            currency_code: "USD"
+          }
+        }]
+      });
+    },
+    onApprove: function(data, actions) {
+      return actions.order.capture().then(function(details) {
+        sendFormData();
+      });
+    }
+  }).render('#paypal-button-container');
+}
+
 function sendFormData() {
   const form = document.getElementById('form');
   const formData = new FormData(form);
   
-  // Collect all participant data including gender
+  // Convert FormData to object with arrays for repeated fields
   const formDataObj = {};
   formData.forEach((value, key) => {
     if (key.endsWith('[]')) {
       const cleanKey = key.replace('[]', '');
       if (!formDataObj[cleanKey]) formDataObj[cleanKey] = [];
       formDataObj[cleanKey].push(value);
+    } else if (key.startsWith('Gender-')) {
+      if (!formDataObj['Gender']) formDataObj['Gender'] = [];
+      formDataObj['Gender'].push(value);
     } else {
       formDataObj[key] = value;
     }
@@ -195,9 +294,18 @@ function sendFormData() {
   fetch("https://script.google.com/macros/s/AKfycbxxtQnrbYjg06wBU30dmORSk3ef_bDZ-Qju5vaLJXx14vM80bNKFbsOo59GA_8do0Nw/exec", {
     method: "POST",
     body: keyValuePairs.join("&"),
-    headers: {"Content-Type": "application/x-www-form-urlencoded"}
+    headers: {
+      "Content-Type": "application/x-www-form-urlencoded"
+    }
   }).then(response => {
-    if (response.ok) window.location.href = "thank-you.html";
+    if (response.ok) {
+      window.location.href = "thank-you.html";
+    } else {
+      throw new Error('Form submission failed');
+    }
+  }).catch(error => {
+    console.error('Error:', error);
+    alert('There was a problem submitting your registration. Please try again.');
   });
 }
 </script>
